# Animal_Classification_using_CNNs

./: README.md  main.py  pyproject.toml
