[project]
name = "animal-classifier-cnn"
version = "0.1.0"
description = "CNN-based animal classification system for 10 animal species"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.7.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
